# Contract_Review_backend-Py

./: .dockerignore  .env  .gitignore  AGENTS.md  API_USAGE.md  Dockerfile  PLANS.md  README.md  docker-compose.qdrant.yml  env_example.txt  frontend_example.html  main.py  main_new.py  mcp-config.json  mcp_client.py  pyproject.toml  requirements.txt  start_api.py  start_mcp_server.py  start_redis.py  start_server.py  test-llm.py  test_api.py  test_multi_user_api.py  test_review_task.py
app/api/: models.py  routes.py
app/config/: config.py  config.yaml
app/core/: cas_utils.py  config.py  database.py  dependencies.py  global_init.py  llm.py  llm_manager.py  mysql_db.py  redis.py
app/curd/: __init__.py  chat.py  chat_session.py  comparison_task.py  contract_file.py  contract_type.py  model_configs.py  prompt_manage.py  review_task.py  signboard.py  user.py
app/middlewares/: auth.py
app/models/: __init__.py  comparison.py  contract.py  contract_type.py  model_configs.py  prompt_manage.py  review.py  session_message.py  user.py
app/rag/: AGENTS.md  RAG_VIBE_CODING_PLAN.md  __init__.py  config.py  factory.py  schemas.py
app/rag/clients/: __init__.py  embedding_local.py  embedding_remote.py  fake_embedding.py  qdrant_client.py  rerank_remote.py
app/rag/examples/: external_legal_sample.jsonl  internal_rules_sample.jsonl  review_task_minimal_contract.txt  review_task_minimal_sample.json
app/rag/ingest/: __init__.py  chunkers.py  external_legal_ingest.py  internal_rules_ingest.py
app/rag/retrievers/: __init__.py  external_legal_retriever.py  hybrid_fusion.py  internal_rules_retriever.py  multi_query.py  reranker.py
app/rag/services/: __init__.py  bootstrap.py  context_builder.py  qdrant_setup.py  rag_service.py  remote_embedding_validation.py  retrieval_validation.py  review_contract_validation.py  review_task_validation.py
app/router/: __init__.py  cas_auth.py  chat.py  chat_session.py  comparison_task.py  contract.py  contract_type.py  llm_config.py  model_configs.py  prompt_manage.py  review_task.py  session.py  signboard.py  user.py
app/schemas/: base.py  chat.py  comparison_task.py  contract.py  contract_file.py  contract_type.py  llm_config.py  model_configs.py  prompt_manage.py  review_task.py  session.py  session_chat.py  signboard.py  user.py
app/services/: MULTI_AGENT_LEGAL_REVIEW_RULE_ENGINE_PLAN.md  chat_service.py  contract_review.py  document_comparison.py  document_processor.py  enhanced_memory_service.py
app/utils/: cas_server.py  content_slicer.py  contract_parser.py  document_annotation.py  document_parsing.py  logs_utils.py  mcp_client.py
data/: contract_review.db
docs/: AGENT_BACKEND_DECOUPLING_SCAN.md  AGENT_CONTRACT_DESIGN.md  LEGACY_AGENT_FIELD_BASELINE.md  MULTI_USER_GUIDE.md  PROJECT_STRUCTURE.md  TESTING.md
output/: contract_review_data_20250806_155231.json  contract_review_report_20250806_155231.md  modified_校园主页升级改版服务合同.docx
output/results/: contract_review_report_20251005_224636.md  contract_review_report_20251005_225431.md
output/uploads/: 234_校园主页升级改版服务合同.docx  666_test.docx  aaa_bbb_校园主页升级改版服务合同.docx  string_重庆第二师范学院南山校区学生宿舍三期建设工程EPC总承包合同2025.4.27最终版.docx
prompts/: README.md  contract_reviewer_prompt.txt  contract_reviewer_prompt_base.txt  contract_reviewer_prompt_build.txt  contract_reviewer_prompt_new  contract_reviewer_prompt_sales.txt  contract_reviewer_prompt_service.txt  contract_reviewer_prompt_unified.txt  llm_prompt_vars.py
tests/: contract_comparison_test.py  document_parsing_test.py  test_agent_chunking.py  test_agent_contracts.py  test_agent_docx_parser.py  test_agent_pdf_parser.py  test_document_intake_sensing.py  test_upload.py
tests/conf/: docker-compose.yml  docker.sh  install_latest.sh
tests/data/: .gitignore
(+43 files in other folders)
