[project]
name = "contract-review-backend-py"
version = "0.1.0"
description = ""
authors = [
    {name = "kaiser",email = "1587973663@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain (>=0.1.0)",
    "langchain-core (>=0.1.0)",
    "langchain-deepseek (>=0.0.1)",
    "langchain-mcp-adapters (>=0.0.1)",
    "langgraph (>=0.0.40)",
    "aiohttp (>=3.8.0)",
    "requests (>=2.31.0)",
    "pydantic (>=2.0.0)",
    "python-dotenv (>=1.0.0)",
    "fastapi (>=0.104.0)",
    "uvicorn (>=0.24.0)",
    "python-multipart (>=0.0.6)",
    "lxml (>=6.0.2,<7.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pdf2docx (>=0.5.8,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"