[project]
name = "contract-review-backend-py"
version = "0.1.0"
description = ""
authors = [
    {name = "kaiser",email = "1587973663@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain (>=0.1.0)",
    "langchain-core (>=0.1.0)",
    "langchain-deepseek (>=0.0.1)",
    "langchain-mcp-adapters (>=0.0.1)",
    "langgraph (>=0.0.40)",
    "aiohttp (>=3.8.0)",
    "requests (>=2.31.0)",
    "pydantic (>=2.0.0)",
    "python-dotenv (>=1.0.0)",
    "fastapi (>=0.104.0)",
    "uvicorn (>=0.24.0)",
    "python-multipart (>=0.0.6)",
    "lxml (>=6.0.2,<7.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pdf2docx (>=0.5.8,<0.6.0)",
    "redis (>=6.4.0,<7.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "oauthlib (>=3.3.1,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "spire-doc-free (>=12.12.0,<13.0.0)",
    "spire-pdf-free (>=10.12.0,<11.0.0)",
    "python-cas (>=1.6.0,<2.0.0)",
    "pymupdf (==1.26.4)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"