[project]
name = "contract-review-backend-py"
version = "0.1.0"
description = "Backend service for AI contract review"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "aiohttp>=3.13.1,<4",
    "fastapi>=0.119.1,<1",
    "html2docx>=1.6.0,<2",
    "langchain-core>=0.3.76,<0.4",
    "langchain-mcp-adapters>=0.1.11,<0.2",
    "langchain-openai>=0.3.33,<0.4",
    "lxml>=6.0.2,<7",
    "openai>=1.109.1,<2",
    "oauthlib>=3.3.1,<4",
    "passlib>=1.7.4,<2",
    "pdf2docx>=0.5.8,<0.6",
    "pdf2image>=1.17.0,<2",
    "pdfplumber>=0.11.7,<0.12",
    "pydantic>=2.12.3,<3",
    "pymupdf>=1.26.5,<2",
    "pymysql>=1.1.2,<2",
    "pyjwt>=2.10.1,<3",
    "pytesseract>=0.3.13,<0.4",
    "python-cas>=1.6.0,<2",
    "python-docx>=1.2.0,<2",
    "python-dotenv>=1.1.1,<2",
    "python-multipart>=0.0.20,<0.0.21",
    "pyyaml>=6.0.3,<7",
    "redis>=6.4.0,<7",
    "requests>=2.32.5,<3",
    "spire-doc-free>=12.12.0,<13",
    "spire-pdf-free>=10.12.0,<11",
    "sqlalchemy>=2.0.44,<3",
    "sse-starlette>=3.0.2,<4",
    "tqdm>=4.67.1,<5",
    "uvicorn>=0.37.0,<0.38",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.3.0",
    "langgraph>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "pytest-asyncio>=1.2.0,<2",
    "pytest-benchmark>=5.1.0,<6",
]

[build-system]
requires = ["hatchling>=1.27.0,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
